--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   google_maps_flutter: ^2.0.6
   geolocator: ^8.0.0
   permission_handler: ^10.0.0
+  carousel_slider: ^5.0.0
+  url_launcher: ^6.3.0
 
 
 
@@ -63,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/carwash.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
