--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: eDrop
+name: DueSpot
 description: "Convenience and satisfaction to your doorstep."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -36,6 +36,7 @@ dependencies:
   carousel_slider: ^5.0.0
   url_launcher: ^6.3.0
   http: ^1.2.2
+  shared_preferences: ^2.3.2
 
 
 
@@ -68,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/carwash.jpg
+     - assets/car_washbg.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
